# jupyter-studio

./: LICENSE  README.md  README.zh-CN.md  install.cmd  install.ps1  install.sh
clawcode/: .clawcode.json  README.md  README.zh.md  pyproject.toml  requirements.txt
clawcode/.claude/: README.md  settings.local.json
clawcode/.claude/agents/: README.md
clawcode/.claude/plugins/: README.md
clawcode/.claw/: README.md
clawcode/.claw/agents/: clawteam-business-analyst.md  clawteam-dev-manager.md  clawteam-devops.md  clawteam-product-manager.md  clawteam-project-manager.md  clawteam-qa.md  clawteam-rnd-backend.md  clawteam-rnd-frontend.md  clawteam-rnd-mobile.md  clawteam-scrum-master.md  clawteam-sre.md  clawteam-system-architect.md  clawteam-team-lead.md  clawteam-ui-ux-designer.md  designteam-experience-design-expert.md  designteam-interaction-designer.md  designteam-product-designer.md  designteam-ui-designer.md  (+2 more)
clawcode/config/: research_config.yaml
clawcode/docs/: RESEARCH_MODE.md  RESEARCH_TEAM_MODE.md  agent-team-orchestration.md  clawcode-configuration.md  clawcode-performance.md  slash-commands.md
jupyter_studio_ai/: README.md  pyproject.toml
jupyter_studio_ai/jupyter-config/jupyter_server_config.d/: jupyter_studio_ai.json
jupyter_studio_ai/jupyter_studio_ai/: __init__.py  bridge.py  extension.py  models.py  notebook_rpc.py  perm_adapter.py  runtime.py
jupyter_studio_ai/jupyter_studio_ai/handlers/: __init__.py  chat.py  coder.py  health.py  inline.py  session.py
jupyter_studio_ai/jupyter_studio_ai/jupyter_tools/: __init__.py  base.py  cells.py
open-jupyter/: README.md  Release.md  cli.md  dev.md  package-lock.json  package.json  python-env-management.md  tbump.toml  troubleshoot.md  user-guide.md
open-jupyter/scripts/: buildutil.js  copyassets.js  notarize.js
(+303 files in other folders)
